compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_pattern_spread.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 939
expression: "\nimport wibble/wobble.{type Wibble as Wobble}\n\nrecord Thing {\n  Thing(id: Int, value: Wobble)\n}\n\npub fn main(thing: Thing) {\n  case thing {\n    Thing(id: 0, ..) -> 12\n    _ -> 14\n  }\n}\n"
---
import wibble/wobble.{type Wibble as Wobble}

record Thing {
  Thing(id: Int, value: Wobble)
}

pub fn main(thing: Thing) {
  case thing {
    Thing(id: 0, ..) -> 12
                 ↑▔       
    _ -> 14
  }
}


----- Hover content -----
Scalar(
    String(
        "Unused labelled fields:\n- `value: Wobble`",
    ),
)
