compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_unqualified.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble}\nconst value = wobble.Wobble\n"
---
import wibble/wobble.{type Wibble}
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content -----
Scalar(
    String(
        "```rakun\nWibble\n```\n",
    ),
)
