compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_unqualified_aliased.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble as Wobble}\nconst value = wobble.Wobble\n"
---
import wibble/wobble.{type Wibble as Wobble}
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content -----
Scalar(
    String(
        "```rakun\nWobble\n```\n",
    ),
)
