compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_unqualified_import.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 892
expression: "\nimport wibble/wobble.{type Wibble as Wobble, Wobble}\n"
---
import wibble/wobble.{type Wibble as Wobble, Wobble}
                                             ↑▔▔▔▔▔ 


----- Hover content -----
Scalar(
    String(
        "```rakun\nWobble\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/wibble/wobble.html#Wobble)",
    ),
)
