compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_expressions_in_function_body.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 424
expression: "\nfn append(x, y) {\n  x ++ y\n}\n"
---
fn append(x, y) {
  x ++ y
  ↑     
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nString\n```\nA locally defined variable.",
    ),
)
