compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_external_imported_constants.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport example_module\nfn main() {\n  example_module.my_const\n}\n"
---
import example_module
fn main() {
  example_module.my_const
                ▔▔▔↑▔▔▔▔▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/example_module.html#my_const)",
    ),
)
