compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_external_imported_function_nested_module.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 281
expression: "\nimport my/nested/example_module\nfn main() {\n    example_module.my_fn\n}\n"
---
import my/nested/example_module
fn main() {
    example_module.my_fn
                  ▔▔▔▔↑▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> Nil\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/my/nested/example_module.html#my_fn)",
    ),
)
