compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_external_value_with_two_modules_same_name.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport a/example_module as _\nimport b/example_module\nfn main() {\n    example_module.my_const\n}\n"
---
import a/example_module as _
import b/example_module
fn main() {
    example_module.my_const
                  ▔▔▔▔↑▔▔▔▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/b/example_module.html#my_const)",
    ),
)
